# suplapi-rs

./: Cargo.toml  README.md
src/: http.rs  lib.rs
tests/: integration.rs
